Add Docker infrastructure for dev and production (Dockerfile, docker-compose etc.)